--- a/katalog/templates/katalog.html
+++ b/katalog/templates/katalog.html
@@ -1,25 +1,30 @@
 {% extends 'base.html' %}
 
  {% block content %}
+ 
+ <h5>Nama: </h5>
+ <p>{{nama}}</p>
 
-  <h1>Lab 1 Assignment PBP/PBD</h1>
-
-  <h5>Name: </h5>
-  <p>Fill me!</p>
-
-  <h5>Student ID: </h5>
-  <p>Fill me!</p>
-
-  <table>
-    <tr>
-      <th>Item Name</th>
-      <th>Item Price</th>
-      <th>Item Stock</th>
-      <th>Rating</th>
-      <th>Description</th>
-      <th>Item URL</th>
-    </tr>
-    {% comment %} Add the data below this line {% endcomment %}
-  </table>
+ <table>
+     <tr>
+     <th>Nama Barang</th>
+     <th>Harga Barang</th>
+     <th>Stok Barang</th>
+     <th>Deskripsi</th>
+     <th>Rating</th>
+     <th>Link (URL) Barang</th>
+     </tr>
+     {% comment %} Tambahkan data di bawah baris ini {% endcomment %}
+     {% for barang in list_barang %}
+       <tr>
+           <th>{{barang.item_name}}</th>
+           <th>{{barang.item_price}}</th>
+           <th>{{barang.item_stock}}</th>
+           <th>{{barang.description}}</th>
+           <th>{{barang.rating}}</th>
+           <th>{{barang.item_url}}</th>
+       </tr>
+{% endfor %}
+ </table>
 
  {% endblock content %}
