--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -22,12 +22,12 @@
     </tr>
     {% for todo in list_todolist %}
         <tr>
-            <th>{{todo.0.date}}</th>
-            <th>{{todo.0.title}}</th>
-            <th>{{todo.0.description}}</th>
-            <th>{{todo.1}}</th>
-            <th><button><a href="update-task/{{todo.0.id}}">Ubah Status</a></button></th>
-            <th><button><a href="delete-task/{{todo.0.id}}">Hapus</a></button></th>
+            <th>{{todo.date}}</th>
+            <th>{{todo.title}}</th>
+            <th>{{todo.description}}</th>
+            <th>{{todo.is_finished}}</th>
+            <th><button><a href="update-task/{{todo.id}}">Ubah Status</a></button></th>
+            <th><button><a href="delete-task/{{todo.id}}">Hapus</a></button></th>
         </tr>
     {% endfor %}
 </table>
