--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <script src="% static 'js/bootstrap.js' %"></script>
   {% block meta %}
   {% endblock meta %}
 </head>
