--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -6,27 +6,38 @@
 
 {% block content %}  
 
-<div class = "login">
-    
-    <h1>Formulir Registrasi</h1>  
+<div class = "register">
 
-        <form method="POST" >  
-            {% csrf_token %}  
-            <table>  
-                {{ form.as_table }}  
-                <tr>  
-                    <td></td>
-                    <td><input type="submit" name="submit" value="Daftar"/></td>  
-                </tr>  
-            </table>  
-        </form>
+    <form method="POST" >  
+        {% csrf_token %}
+        <div class="card" style="width: 70%; top: 15%; left: 15%; position: absolute;">
+            <div class="card-header text-white" style="background-color:#0f8e9a;">
+                <div class="fw-bold fs-5">Formulir Registrasi</div>
+            </div>
+            <div class="card-body" style="background-color:rgb(173, 223, 239);">
+                <br>
+                <br>
+                <table style="margin:auto;">
+                    {{ form.as_table }}  
+                    <tr>  
+                        <td></td>
+                        <td><input type="submit" name="submit" value="Daftar"/></td>  
+                    </tr>
+                </table>
+                <br><br>
+            </div>
+        </div>
+    </form>
 
-    {% if messages %}  
-        <ul>   
-            {% for message in messages %}  
-                <li>{{ message }}</li>  
-                {% endfor %}  
-        </ul>   
+    {% if messages %}
+        {% for message in messages %}
+            <br><br>
+            <div class="toast show" role="alert" style="margin: auto;">
+                <div class="toast-body text-center bg-danger text-white">
+                    {{message}}
+                </div>
+            </div>
+        {% endfor %}
     {% endif %}
 
 </div>  
