--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -15,15 +15,16 @@
                 <div class="fw-bold fs-5">Formulir Registrasi</div>
             </div>
             <div class="card-body" style="background-color:rgb(173, 223, 239);">
-                <br>
-                <br>
-                <table style="margin:auto;">
-                    {{ form.as_table }}  
-                    <tr>  
-                        <td></td>
-                        <td><input type="submit" name="submit" value="Daftar"/></td>  
-                    </tr>
-                </table>
+                <br><br>
+                <div class="table-responsive">
+                    <table style="margin:auto;">
+                        {{ form.as_table }}  
+                        <tr>  
+                            <td></td>
+                            <td><input type="submit" name="submit" value="Daftar"/></td>  
+                        </tr>
+                    </table>
+                </div>
                 <br><br>
             </div>
         </div>
