--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -6,9 +6,11 @@
 
 {% block content %}
 
-<nav class="navbar navbar-expand-lg navbar-light justify-content-end">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-md navbar-light justify-content-end">
+    <div class="container">
+
         <a class="navbar-brand">Todolist</a>
+
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -16,6 +18,7 @@
                 </li>
             </ul>
         </div>
+
         <div class="collapse navbar-collapse justify-content-end">
             <ul class="navbar-nav text-right">
                 <li class="nav-item">
@@ -23,6 +26,7 @@
                 </li>
             </ul>
         </div>
+        
     </div>
 </nav>
 
@@ -46,6 +50,7 @@
         <a href="update-task/{{todo.id}}" class="btn btn-success">Ubah Status</a>
         <a href="delete-task/{{todo.id}}" class="btn btn-danger">Hapus</a>
     </div>
+    
 </div>
 <br>
 {% endfor %}
@@ -60,5 +65,7 @@
             </div>
         {% endfor %}
 {% endif %}
+
+<br>
 
 {% endblock content %}
